[package]
name = "chatgrpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.9.1"
prost = "0.11.8"
futures-core = "0.3"
futures-util = "0.3"
tokio-stream = "0.1"
async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
chrono = "0.4.24"
colored = "2.0.0"
reqwest = "0.11.16"

[[bin]]
  name = "nc_server"
  path = "src/server.rs"

[[bin]]
  name = "novachat"
  path = "src/client.rs"  

[build-dependencies]
tonic-build = "0.9.1"  